[tool.poetry]
name = "hallobot"
version = "0.1.0"
description = "A discord bot, which assigns roles."
authors = ["Halloerik <halloerik95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^1.7.3"
emoji = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
